--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </section>
 
-        <!-- <section class="details">
+        <section class="details">
             <div class="details__content container">
 
                 <div class="details__content-item">
@@ -100,7 +100,7 @@
         </section>
 
 
-        <section class="flats">
+     <!--    <section class="flats">
             <div class="flats__content container">
                 <h2>Наши квартиры</h2>
                <div class="lofts"> 
