--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </section>
 
 
-     <!--    <section class="flats">
+        <section class="flats">
             <div class="flats__content container">
                 <h2>Наши квартиры</h2>
                <div class="lofts"> 
@@ -129,7 +129,7 @@
             </div>  
         </section>
 
-        <section class="look">
+       <!--  <section class="look">
             <div class="look__content container">
                <div class="text__look"><h2>Хотите посмотреть?</h2>
 
