--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>  
         </section>
 
-       <!--  <section class="look">
+         <section class="look">
             <div class="look__content container">
                <div class="text__look"><h2>Хотите посмотреть?</h2>
 
@@ -152,7 +152,7 @@
             </div>
         </section>
 
-         <section class="video">
+        <!-- <section class="video">
             <div class="video__content container">
                 <div class="video__video">   
                 <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
