--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                      <form class="look__forms">
                      <input class="name" type="text" placeholder="Ваше имя" required>
 
-                     <input class="phone" type="text" placeholder="Ваше телефон" required>
+                     <input class="phone" type="number" placeholder="Ваш телефон" required>
 
                      <p>*Мы никому не передаем ваши данные. 
                         И не сохраняем ваш номер в базу.</p>
