--- a/index.html
+++ b/index.html
@@ -172,18 +172,21 @@
             </div>
         </section> 
 
-     <!--    <section class="map">
+     <section class="map">
             <div class="map__content container">
                 <h2>Район на карте</h2>
 
                 <div class="map_pic">
-                    <div class="pic"></div>
+                    <div class="pic">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1260.4231521963209!2d69.27064411506817!3d41.291275094610285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b8b27deada5%3A0x7990db21c64514c2!2sMirabad%20Avenue!5e0!3m2!1sru!2s!4v1742494288191!5m2!1sru!2s" width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy"
+                         referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
 
             </div>
         </section>
 
-        <section class="guestion">
+         <section class="guestion">
             <div class="guestion__content container">
                 <h2>Есть вопросы?</h2>
 
@@ -193,13 +196,13 @@
 
                         <input class="guestion__name" type="text" placeholder="Ваше имя" required>
 
-                     <input class="guestion__phone" type="text" placeholder="Ваше телефон" required>
+                     <input class="guestion__phone" type="number" placeholder="Ваше телефон" required>
 
                      <button class="guestion__forms-btn">Посмотреть район</button>
 
                 </form>
             </div>
-        </section> -->
+        </section> 
     </main>
 
     <!-- <footer class="footer">
