--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@
 
                 <div class="map_pic">
                     <div class="pic">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1260.4231521963209!2d69.27064411506817!3d41.291275094610285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b8b27deada5%3A0x7990db21c64514c2!2sMirabad%20Avenue!5e0!3m2!1sru!2s!4v1742494288191!5m2!1sru!2s" width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy"
-                         referrerpolicy="no-referrer-when-downgrade"></iframe>
+                       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34369.34986619694!2d55.135169896818475!3d25.11428553960025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f6b580c1a8897%3A0xcc389002704c0d42!2sHilton%20Dubai%20Palm%20Jumeirah!5e0!3m2!1sru!2s!4v1742820710232!5m2!1sru!2s" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
 
